--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Simple React App</title>
-  <script src="https://kit.fontawesome.com/{kit_id}.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/3a816e8a4a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
