--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Simple React App</title>
+  <title>ArdianBnB</title>
   <script src="https://kit.fontawesome.com/3a816e8a4a.js" crossorigin="anonymous"></script>
 </head>
 
