--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <title>ArdianBnB</title>
-  <script src="https://kit.fontawesome.com/3a816e8a4a.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
