--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>ArdianBnB</title>
+  <link rel="icon" href="../src/images/favicon.ico">
 
   <script src="https://kit.fontawesome.com/caba066164.js" crossorigin="anonymous"></script>
 
